--- a/namespaces/default/namespace.yaml
+++ b/namespaces/default/namespace.yaml
@@ -2,5 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: default
+  labels:
+    env: development
   annotations:
-    configsync.gke.io/cluster-name-selector: acm-demo	
+    configsync.gke.io/cluster-name-selector: acm-demo
