--- a/namespaces/default/pod.yaml
+++ b/namespaces/default/pod.yaml
@@ -8,6 +8,8 @@ metadata:
 spec:
   containers:
   - image: redis
+    securityContext:
+      readOnlyRootFilesystem: true
     name: redis
     resources: {}
   dnsPolicy: ClusterFirst
